edited + changed folders + still to edit

--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,7 @@
 {
     width: 50%;
     height: 50px;
-    background-image: url('assets/logo.png');
+    background-image: url('');
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
