--- a/css/login.css
+++ b/css/login.css
@@ -39,8 +39,6 @@
     background-color: #ffffff;
 }
 
-
-
 h1
 {
     margin-top: 25%;
@@ -64,8 +62,10 @@ p
 .input-field
 {
     
-    border: 2.2px solid black;
-    width: 280px;
+    /*border: 2.2px solid black; */
+    border-style: none;
+    background-color: #F2F2F2;
+    width: 300px;
     height: 50px;
     border-radius: 15px;
     text-align: center;
@@ -80,7 +80,7 @@ p
 {
 
     text-align: center;
-    width: 280px;
+    width: 300px;
     height: 50px;
     border-radius: 15px;
     background-color: #0B51E6;
@@ -94,5 +94,4 @@ p
     background-color: white;
     color: black;
     transition: 0.2s;
-
 }
