--- a/css/signup.css
+++ b/css/signup.css
@@ -2,13 +2,70 @@
 {
     margin: 0;
     padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+h1
+{
+    margin-top: 5%;
+}
+
+.sign-in
+{
+    color: #0B51E6;
 }
 
 .container
 {
-    border: 1px solid black;
+    border: 1px solid white;
+    border-radius: 20px;
+    background-color:white;
     width: 60%;
-    height: 650px;
+    height: 680px;
     margin: auto;
-    margin-top: 4%;
+    margin-top: 3%;
+    position: relative;
+    box-shadow: 0px 0px 100px rgba(0,0,0,0.20);
+}
+
+.form
+{
+    margin-top: 3%;
+}
+
+p
+{
+    left: 0px;
+}
+
+.input-field, .drop-down
+{
+    margin-bottom: 20px;
+    /*border: 2.2px solid black; */
+    border-style: none;
+    background-color: #F2F2F2;
+    width: 40%;
+    height: 50px;
+    border-radius: 15px;
+    text-align: center;
+}
+
+.submit-btn
+{
+
+    text-align: center;
+    width: 40%;
+    height: 50px;
+    border-radius: 15px;
+    background-color: #0B51E6;
+    color: white;
+    border-style: none;
+}
+
+.submit-btn:hover
+{
+    border: 3px solid black;
+    background-color: white;
+    color: black;
+    transition: 0.2s;
 }
