--- a/css/login.css
+++ b/css/login.css
@@ -76,7 +76,7 @@ p
     margin-right: 10px;   
 }
 
-.submit-btn, .google-signin
+.submit-btn
 {
 
     text-align: center;
@@ -88,10 +88,43 @@ p
     border-style: none;
 }
 
-.submit-btn:hover, .google-signin:hover
+.submit-btn:hover
 {
     border: 3px solid black;
     background-color: white;
     color: black;
     transition: 0.2s;
+}
+
+.google-signin
+{
+    border: 3px solid black;
+    background-color: white;
+    text-align: center;
+    width: 300px;
+    height: 50px;
+    border-radius: 15px;
+    color: black;
+}
+
+.google-signin:hover
+{
+    text-align: center;
+    width: 300px;
+    height: 50px;
+    border-radius: 15px;
+    background-color: black;
+    color: white;
+    transition: 0.2s;
+}
+
+.no-account
+{
+    margin-left: 40px;
+    font-weight: lighter;
+}
+
+.signup
+{
+    color: #0B51E6;
 }
