added: available_bus.html+css and settigns.html+css

--- a/css/settings.css
+++ b/css/settings.css
@@ -1,19 +1,8 @@
 *
 {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     font-family: 'Poppins', sans-serif;
-}
-
-h1
-{
-    margin-top: 5%;
-}
-
-.sign-in
-{
-    font-weight: lighter;
-    color: #0B51E6;
 }
 
 .container
@@ -29,20 +18,28 @@ h1
     box-shadow: 0px 0px 80px rgba(0,0,0,0.20);
 }
 
-.form
+h1
 {
-    margin-top: 3%;
+    margin-top: 20px;
+    margin-left: 40px;
 }
 
 p
 {
-    left: 0px;
+    font-weight: lighter;
+    text-align: left;
+    margin-left: 31%;
+    margin-bottom: 2px;
 }
 
-.input-field, .drop-down
+.form
+{
+    margin-top: 60px;
+}
+
+.input-field
 {
     margin-bottom: 20px;
-    /*border: 2.2px solid black; */
     border-style: none;
     background-color: #F2F2F2;
     width: 40%;
@@ -51,10 +48,16 @@ p
     text-align: center;
 }
 
-.submit-btn
+.form i
 {
+    margin-left: 36%;
+    margin-top: 17px;
+    position: absolute;
+    
+}
 
-    text-align: center;
+.btn
+{
     width: 40%;
     height: 50px;
     border-radius: 15px;
@@ -63,10 +66,27 @@ p
     border-style: none;
 }
 
-.submit-btn:hover
+.btn:hover
 {
     border: 3px solid black;
     background-color: white;
     color: black;
+    transition: 0.2s;
+}
+
+.add-btn
+{
+    width: 40%;
+    height: 50px;
+    border: 3px solid black;
+    border-radius: 15px;
+    background-color: white;
+    color: black;
+}
+
+.add-btn:hover
+{
+    background-color: black;
+    color: white;
     transition: 0.2s;
 }
