--- a/css/index.css
+++ b/css/index.css
@@ -2,4 +2,50 @@
 {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
+}
+
+.container
+{
+    position: relative;
+}
+
+.amrita-logo
+{
+    width: 210px;
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+
+    margin-top: 50px;
+    margin-left: 50px;
+    
+    cursor: pointer;
+}
+
+.lotti
+{
+    height: 500px;
+    background: transparent;
+}
+
+
+.text
+{
+    border: 1px solid black;
+    height: 200px;
+    width: 200px;
+    left: 0;
+    background-color: bisque;
+    position: absolute;
+}
+
+.image
+{
+    border: 1px solid black;
+    height: 200px;
+    width: 200px;
+    right: 0;
+    background-color: aquamarine;
+    position: absolute;
 }
