--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
 {
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
 .container
@@ -23,29 +23,62 @@
     cursor: pointer;
 }
 
-.lotti
+.background-img
 {
-    height: 500px;
-    background: transparent;
+    width: 100%;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
-
-.text
+.login
 {
-    border: 1px solid black;
-    height: 200px;
-    width: 200px;
-    left: 0;
-    background-color: bisque;
+    margin-top: 50px;
+    margin-right: 50px;
+    background-color: #0B51E6;
+    border-radius: 18px;
+    height: 50px;
+    width: 170px;
+    float: right;
+    text-align: center;
+}
+
+.login-btn
+{
+    color: white;
+    margin-top: 13px;
+}
+
+.nav
+{
+    margin-top: 50px;
+    margin-left: 27%;
     position: absolute;
 }
 
-.image
+.nav-btn
 {
-    border: 1px solid black;
-    height: 200px;
+    border: 2px solid white;
+    border-radius: 18px;
+    margin-left: 20px;
+    height: 37px;
     width: 200px;
-    right: 0;
-    background-color: aquamarine;
+    padding-top: 13px;
+    text-align: center;
+    color: white;
+    float: left;
+}
+
+.heading
+{
     position: absolute;
+    margin-top: 14%;
+    margin-left: 150px;
+}
+
+.l1
+{
+    color: white;
+    font-size: 70px;
 }
