--- a/css/index.css
+++ b/css/index.css
@@ -12,6 +12,7 @@
 
 .amrita-logo
 {
+    
     width: 210px;
     background-size: contain;
     background-repeat: no-repeat;
@@ -34,20 +35,22 @@
 
 .login
 {
-    margin-top: 50px;
+    
     margin-right: 50px;
-    background-color: #0B51E6;
-    border-radius: 18px;
-    height: 50px;
-    width: 170px;
     float: right;
     text-align: center;
 }
 
 .login-btn
 {
+    cursor: pointer;
+    margin-top: 50px;
+    border-radius: 15px;
+    border-style: none;
+    background-color: #0B51E6;
     color: white;
-    margin-top: 13px;
+    height: 50px;
+    width: 170px;
 }
 
 .nav
@@ -59,26 +62,65 @@
 
 .nav-btn
 {
+    cursor: pointer;
     border: 2px solid white;
-    border-radius: 18px;
+    background-color: transparent;
+    border-radius: 15px;
     margin-left: 20px;
-    height: 37px;
+    height: 50px;
     width: 200px;
-    padding-top: 13px;
-    text-align: center;
     color: white;
-    float: left;
 }
 
 .heading
 {
     position: absolute;
-    margin-top: 14%;
+    margin-top: 12%;
     margin-left: 150px;
 }
 
 .l1
 {
     color: white;
-    font-size: 70px;
+    font-size: 90px;
 }
+
+.started
+{
+    height: 700px;
+    position: relative;
+}
+
+.started-btn, .learn-btn
+{
+    cursor: pointer;
+    position: absolute;
+    border-radius: 15px;
+    border-style: none;
+    border-color: transparent;
+    background-color: #0B51E6;
+    color: white;
+    height: 50px;
+    width: 200px;
+    bottom: 0px;
+    left: 170px;
+}
+
+.learn-btn
+{
+    background-color: transparent;
+    left: 400px;
+}
+
+.started-btn:hover
+{
+    transition: 0.5s;
+    box-shadow: 0px 0px 30px rgba(11, 81, 230, 1);
+}
+
+.learn-btn:hover
+{
+    transition: 0.5s;
+    border: 2px solid white;
+}
+
