--- a/css/login.css
+++ b/css/login.css
@@ -64,7 +64,7 @@ p
     
     /*border: 2.2px solid black; */
     border-style: none;
-    background-color: #F2F2F2;
+    background-color: #e0e0e0;
     width: 300px;
     height: 50px;
     border-radius: 15px;
