--- a/css/signup.css
+++ b/css/signup.css
@@ -26,7 +26,7 @@ h1
     margin: auto;
     margin-top: 5%;
     margin-bottom: 5%;
-    box-shadow: 0px 0px 80px rgba(0,0,0,0.20);
+    box-shadow: 0px 0px 80px rgba(0,0,0,0.3);
 }
 
 .form
@@ -51,7 +51,7 @@ p
 {
     margin-bottom: 20px;
     border-style: none;
-    background-color: #F2F2F2;
+    background-color: #e0e0e0;
     width: 40%;
     height: 50px;
     border-radius: 15px;
