--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,17 @@
     scroll-behavior: smooth;
 }
 
+#preloader
+{
+    background: white url("../images/loader-t.gif") no-repeat center center;
+    background-size: 10%;
+    transition: opacity 0.3s;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
 .container
 {
     position: relative;
