--- a/css/signup.css
+++ b/css/signup.css
@@ -5,6 +5,17 @@
     font-family: 'Poppins', sans-serif;
 }
 
+#preloader
+{
+    background: white url("../images/loader-t.gif") no-repeat center center;
+    background-size: 10%;
+    transition: opacity 0.3s;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
 h1
 {
     margin-top: 5%;
