--- a/css/team.css
+++ b/css/team.css
@@ -7,6 +7,17 @@
     box-sizing: border-box;
 }
 
+#preloader
+{
+    background: white url("../images/loader-t.gif") no-repeat center center;
+    background-size: 10%;
+    transition: opacity 0.3s;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
+
 h1
 {
     margin-top: 50px;
