--- a/css/team.css
+++ b/css/team.css
@@ -18,54 +18,89 @@
     z-index: 100;
 }
 
+.container
+{
+    position: relative;
+}
+
 h1
 {
-    margin-top: 50px;
-    font-size: 40px;
-}
-
-.box1, .box2
-{
-    margin-top: 70px;
-    border-radius: 30px;
-    height: 500px;
-    width: 400px;
+    color: white;
     text-align: center;
-    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.2);
+    margin: 50px auto 0 auto;
+    left: 0;
+    right: 0;
+    font-size: 70px;
+    position: absolute;
+}
+
+.team-img
+{
+    height: 100%;
+    width: 100%;
+    height: auto;
+    position: fixed;
+}
+
+.right-col, .left-col
+{
+    position: absolute;
+    height: 620px;
+    width: 30%;
+    top: 170px;
+    opacity: 0;
+}
+
+.left-col
+{   
+    left: 300px;
+}
+
+.left-col:hover
+{
+    transition: 1s;
+    opacity: 1;
+    transform: translateX(-100px);
+}
+
+.right-col
+{
     
+    right: 300px;
 }
 
-.box1:hover, .box2:hover
+.right-col:hover
 {
-    box-shadow: 0px 0px 50px rgba(0, 0, 0, 0.4);
-    transition: 0.3s;
-    transform:scale(1.01);
+    transition: 1s;
+    opacity: 1;
+    transform: translateX(100px);
 }
 
-.box1
+.left-title, .right-title
 {
-    margin-left: 300px;
-    float: left;
-    background-color: #590696;
-}
-.box2
-{
-    margin-right: 300px;
-    width: 400px;
-    float: right;
-    background-color: #590696;
+    position: absolute;
+    color: white;
+    font-size: 25px;
+    text-align: right;
+    top: 260px;
 }
 
-.content
+.left-title
 {
-    margin-top: 100%;
-    border: 1px solid transparent;
-    background-color: white;
-    border-radius: 0 0 30px 30px;
-    height: 100px;
+    left: 0px;
 }
 
-h3
+.right-title
 {
-    margin-top: 20px;
+    right: 0px;
+}
+
+.desc
+{
+    font-size: 18px;
+}
+
+a
+{
+    color: white;
 }
