--- a/css/homepage.css
+++ b/css/homepage.css
@@ -36,6 +36,7 @@
     width: 25%;
     position: absolute;
     background-color: white;
+    box-shadow: 10px 0px 50px rgba(0,0,0,0.50);
 }
 
 h3
@@ -101,17 +102,23 @@ h3
     height: 100%;
     width: 100%;
 }
+.google-map
+{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+}
 
 .floating
 {
     margin-top: 30px;
-    margin-left: 30px;
+    margin-left: 64%;
     background-color: white;
     border-radius: 30px;
     width: 34%;
     height: 13%;
     position: relative;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.20);
+    box-shadow: 6px 6px 30px rgba(0,0,0,0.50);
 }
 
 .location
@@ -134,14 +141,14 @@ h3
 .bus
 {
     margin-top: 20px;
-    margin-left: 30px;
+    margin-left: 86%;
     background-color: white;
     border-radius: 20px;
     width: 12%;
     height: 12%;
     text-align: center;
     position: absolute;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.20);
+    box-shadow: 6px 6px 30px rgba(0,0,0,0.50);
 }
 
 .bus-no
@@ -156,10 +163,10 @@ h3
     bottom: 0px;
     width: 50%;
     height: 25%;
-    margin-bottom: 30px;
-    margin-left: 30px;
+    margin-bottom: 50px;
+    margin-left: 50px;
     border-radius: 20px;
-    box-shadow: 10px 10px 20px rgba(0,0,0,0.20);
+    box-shadow: 6px 6px 30px rgba(0,0,0,0.50);
 }
 
 .profile-driver
